--- a/day8_expressPagination/users/package.json
+++ b/day8_expressPagination/users/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "express-validator": "^6.14.0",
-    "mongoose": "^6.2.8"
+    "mongoose": "^6.2.8",
+    "multer": "^1.4.4"
   }
 }
