--- a/day8_expressPagination/users/package.json
+++ b/day8_expressPagination/users/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.3",
     "express-validator": "^6.14.0",
     "mongoose": "^6.2.8",
-    "multer": "^1.4.4"
+    "multer": "^1.4.4",
+    "nodemailer": "^6.7.3"
   }
 }
